# fastapi-test

./: .dockerignore  .example.env  Dockerfile  README.md  alembic.ini  docker-compose.yml  generate_test_data.py  init.sql  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 1dfb3b09df87_init.py
src/: api.py  config.py  generate_test_data.py  start.py  test_data.py
src/alembic/: env.py  script.py.mako
src/api/: api.py
src/database/: dao.py  models.py  orm.py
