[project]
name = "nebus-test"
version = "0.1.0"
description = ""
authors = [
    {name = "alexey",email = "schwartzalexey@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "geoalchemy2 (>=0.17.1,<0.18.0)"
]

[tool.poetry]
name = "nebus-test"
version = "0.1.0"
description = ""
authors = [
    "alexey schwartzalexey@yandex.com"
]
readme = "README.md"

packages = [
  { include = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
